增加了画板背景,画板设了0.7的alpha为了美观

--- a/app/src/main/res/layout/work3.xml
+++ b/app/src/main/res/layout/work3.xml
@@ -32,17 +32,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/iv_db"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY"
-                app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/drawboard"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@id/linearLayout4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/drawboard" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/iv_db"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:alpha="0.7"
+                    android:foreground="@drawable/drawboard"
+                    android:scaleType="fitXY"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/drawboard" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/linearLayout4"
