--- a/app/src/main/res/layout/work3.xml
+++ b/app/src/main/res/layout/work3.xml
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
-                    android:alpha="0.7"
+                    android:alpha="0.26"
                     android:foreground="@drawable/drawboard"
                     android:scaleType="fitXY"
                     app:layout_constraintTop_toTopOf="parent"
@@ -70,7 +70,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/btn1"
                     android:onClick="btn_color"
-                    android:shadowColor="#94D400"
+                    android:shadowColor="#DBE3DC"
                     android:text="颜色"
                     android:textColor="@android:color/holo_orange_light"
                     android:textSize="30sp" />
@@ -83,7 +83,7 @@
                     android:background="@drawable/btn2"
                     android:onClick="btn_bold"
                     android:shadowColor="#94D400"
-                    android:text="加粗"
+                    android:text="粗细"
                     android:textColor="@android:color/holo_green_light"
                     android:textSize="30sp" />
 
