增加了第7次作业,通过广播形式完成简单的倒计时功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,6 +96,15 @@
                     android:background="@drawable/colorful"
                     android:text="作业5-数据库"
                     android:textSize="27sp" />
+
+                <Button
+                    android:id="@+id/bt6"
+                    android:layout_width="match_parent"
+                    android:layout_height="175dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/purple"
+                    android:text="作业6-倒计时"
+                    android:textSize="27sp" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
