--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,12 +98,21 @@
                     android:textSize="27sp" />
 
                 <Button
-                    android:id="@+id/bt6"
+                    android:id="@+id/bt7"
                     android:layout_width="match_parent"
                     android:layout_height="175dp"
                     android:layout_weight="1"
                     android:background="@drawable/purple"
-                    android:text="作业6-倒计时"
+                    android:text="作业7-倒计时"
+                    android:textSize="27sp" />
+
+                <Button
+                    android:id="@+id/bt8"
+                    android:layout_width="match_parent"
+                    android:layout_height="175dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/colors"
+                    android:text="作业8-异步下载"
                     android:textSize="27sp" />
             </LinearLayout>
         </ScrollView>
